Rename 'Basic Access' to 'Starter' in locale files for clarity

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -438,7 +438,7 @@
   },
   "planContent": {
     "products": {
-      "Basic Access": "Basic Access",
+      "Starter": "Starter",
       "Professional": "Professional"
     },
     "plans": {
@@ -450,12 +450,12 @@
       "Custom": "Custom"
     },
     "descriptions": {
-      "Basic Access": "Perfect for learning and side projects",
+      "Starter": "Perfect for learning and side projects",
       "Professional": "For creators building real products",
       "Custom": "For teams and enterprises at scale"
     },
     "features": {
-      "Basic Access": "**Everything you need to start building**\n\n✓ Unlimited public projects  \n✓ 10 credits per day (30/month)  \n✓ React + TypeScript + Tailwind  \n✓ Live preview & code editor  \n✓ Free hosting on kliv.site  \n✓ Database & authentication  \n✓ File uploads & email  \n✓ Email support  \n✓ Community support  \n✓ Export to GitHub",
+      "Starter": "**Everything you need to start building**\n\n✓ Unlimited public projects  \n✓ 10 credits per day (30/month)  \n✓ React + TypeScript + Tailwind  \n✓ Live preview & code editor  \n✓ Free hosting on kliv.site  \n✓ Database & authentication  \n✓ File uploads & email  \n✓ Email support  \n✓ Community support  \n✓ Export to GitHub",
       "Professional": "**Everything in Free, plus:**\n\n✓ Private projects  \n✓ 100+ credits per month  \n✓ Custom domains (www.yourbiz.com)  \n✓ Priority AI response  \n✓ Remove Kliv branding  \n✓ Team collaboration  \n✓ Priority support  \n✓ Extended revision history",
       "Custom": "**Everything in Professional, plus:**\n\n✓ Dedicated private enclave  \n✓ Custom credit allocation  \n✓ Single Sign-On (SAML/SSO)  \n✓ Advanced security & compliance  \n✓ Advanced analytics  \n✓ Dedicated account manager  \n✓ Custom SLA guarantee  \n✓ Volume discounts  \n✓ On-premise deployment option  \n✓ Custom integrations & APIs  \n✓ Training & onboarding  \n✓ 24/7 priority support"
     },
