--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -438,7 +438,7 @@
   },
   "planContent": {
     "products": {
-      "Basic Access": "Grundläggande åtkomst",
+      "Starter": "Starter",
       "Professional": "Professionell"
     },
     "plans": {
@@ -450,12 +450,12 @@
       "Custom": "Anpassad"
     },
     "descriptions": {
-      "Basic Access": "Perfekt för lärande och sidoprojekt",
+      "Starter": "Perfekt för lärande och sidoprojekt",
       "Professional": "För skapare som bygger riktiga produkter",
       "Custom": "För team och företag i stor skala"
     },
     "features": {
-      "Basic Access": "**Allt du behöver för att börja bygga**\n\n✓ Obegränsade offentliga projekt  \n✓ 10 krediter per dag (30/månad)  \n✓ React + TypeScript + Tailwind  \n✓ Live förhandsvisning & kodredigerare  \n✓ Gratis hosting på kliv.site  \n✓ Databas & autentisering  \n✓ Filuppladdning & e-post  \n✓ E-postsupport  \n✓ Community-support  \n✓ Exportera till GitHub",
+      "Starter": "**Allt du behöver för att börja bygga**\n\n✓ Obegränsade offentliga projekt  \n✓ 10 krediter per dag (30/månad)  \n✓ React + TypeScript + Tailwind  \n✓ Live förhandsvisning & kodredigerare  \n✓ Gratis hosting på kliv.site  \n✓ Databas & autentisering  \n✓ Filuppladdning & e-post  \n✓ E-postsupport  \n✓ Community-support  \n✓ Exportera till GitHub",
       "Professional": "**Allt i Gratis, plus:**\n\n✓ Privata projekt  \n✓ 100+ krediter per månad  \n✓ Anpassade domäner (www.dittföretag.se)  \n✓ Prioriterad AI-respons  \n✓ Ta bort Kliv-varumärke  \n✓ Teamsamarbete  \n✓ Prioriterad support  \n✓ Utökad revisionshistorik",
       "Custom": "**Allt i Professionell, plus:**\n\n✓ Dedikerad privat enklav  \n✓ Anpassad kredittilldelning  \n✓ Single Sign-On (SAML/SSO)  \n✓ Avancerad säkerhet & compliance  \n✓ Avancerad analys  \n✓ Dedikerad kontoansvarig  \n✓ Anpassad SLA-garanti  \n✓ Volymrabatter  \n✓ On-premise distributionsalternativ  \n✓ Anpassade integrationer & API:er  \n✓ Utbildning & onboarding  \n✓ 24/7 prioriterad support"
     },
