--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -438,7 +438,7 @@
   },
   "planContent": {
     "products": {
-      "Basic Access": "ベーシックアクセス",
+      "Starter": "スターター",
       "Professional": "プロフェッショナル"
     },
     "plans": {
@@ -450,12 +450,12 @@
       "Custom": "カスタム"
     },
     "descriptions": {
-      "Basic Access": "学習とサイドプロジェクトに最適",
+      "Starter": "学習とサイドプロジェクトに最適",
       "Professional": "本格的な製品を構築するクリエイター向け",
       "Custom": "大規模なチームと企業向け"
     },
     "features": {
-      "Basic Access": "**構築を開始するために必要なすべて**\n\n✓ 無制限のパブリックプロジェクト  \n✓ 1日10クレジット（30/月）  \n✓ React + TypeScript + Tailwind  \n✓ ライブプレビュー＆コードエディタ  \n✓ kliv.siteでの無料ホスティング  \n✓ データベース＆認証  \n✓ ファイルアップロード＆メール  \n✓ メールサポート  \n✓ コミュニティサポート  \n✓ GitHubへエクスポート",
+      "Starter": "**構築を開始するために必要なすべて**\n\n✓ 無制限のパブリックプロジェクト  \n✓ 1日10クレジット（30/月）  \n✓ React + TypeScript + Tailwind  \n✓ ライブプレビュー＆コードエディタ  \n✓ kliv.siteでの無料ホスティング  \n✓ データベース＆認証  \n✓ ファイルアップロード＆メール  \n✓ メールサポート  \n✓ コミュニティサポート  \n✓ GitHubへエクスポート",
       "Professional": "**無料プランのすべて、さらに：**\n\n✓ プライベートプロジェクト  \n✓ 月100+クレジット  \n✓ カスタムドメイン (www.yourbiz.com)  \n✓ 優先AI応答  \n✓ Klivブランディング削除  \n✓ チームコラボレーション  \n✓ 優先サポート  \n✓ 拡張リビジョン履歴",
       "Custom": "**プロフェッショナルのすべて、さらに：**\n\n✓ 専用プライベートエンクレーブ  \n✓ カスタムクレジット割り当て  \n✓ シングルサインオン（SAML/SSO）  \n✓ 高度なセキュリティ＆コンプライアンス  \n✓ 高度な分析  \n✓ 専任アカウントマネージャー  \n✓ カスタムSLA保証  \n✓ ボリュームディスカウント  \n✓ オンプレミスデプロイオプション  \n✓ カスタム統合＆API  \n✓ トレーニング＆オンボーディング  \n✓ 24/7優先サポート"
     },
