--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -715,19 +715,35 @@
     },
     "whereWereGoing": {
       "title": "私たちが目指すところ",
-      "paragraph1": "AIを使ってアプリやウェブサイトのフロントエンドを構築することが、ほぼ解決された問題となる段階に急速に到達しています。現在の焦点は、フロントエンドと連携する、より高度なバックエンド機能を有効にすることです：",
+      "paragraph1": "AIを使ったフロントエンドアプリケーションの構築は、ほぼ解決されています。現在の焦点は、実世界のアプリケーションを動かすインフラストラクチャ機能でKliv Cloudを拡張することです：",
       "listIntro": "次に構築するもの：",
       "features": {
-        "backgroundJobs": "バックグラウンドジョブ",
-        "queuesWorkers": "キューとワーカー",
-        "apiEndpoints": "APIエンドポイント",
-        "workflows": "ワークフロー",
-        "backendLogic": "バックエンドビジネスロジック",
-        "dataPipelines": "完全なデータパイプライン",
-        "permissions": "権限モデル",
-        "infrastructure": "完全なインフラストラクチャ・アズ・コード"
+        "scheduled": {
+          "title": "スケジュール実行ジョブ",
+          "description": "日次レポート、クリーンアップジョブ、定期的なプロセスなど、スケジュールに基づいてバックエンドタスクを実行"
+        },
+        "webhooks": {
+          "title": "Webhook＆イベント",
+          "description": "決済プロバイダー、CRM、サードパーティサービスからの外部イベントに対応"
+        },
+        "streaming": {
+          "title": "ストリーミングレスポンス",
+          "description": "完了を待つことなく、大規模なデータセットとリアルタイムのAIレスポンスをストリーミング"
+        },
+        "realtime": {
+          "title": "リアルタイムサブスクリプション",
+          "description": "ライブデータベース更新、共同編集、クライアント間の即座の通知"
+        },
+        "vector": {
+          "title": "ベクトル検索",
+          "description": "ベクトル埋め込みを使用したセマンティック検索とAI駆動レコメンデーション"
+        },
+        "queues": {
+          "title": "バックグラウンドキュー",
+          "description": "画像処理、エクスポート、バッチ操作など、重いワークロードを非同期で処理"
+        }
       },
-      "paragraph2": "AIがスタックのより多くの部分を組み立てることができるよう、耐久性のある方法で道を急速に舗装しています。"
+      "paragraph2": "私たちは、AIがあなたのインフラストラクチャスタックのより多くを組み立てられるよう、プラットフォームを拡張しています — 信頼性が高く大規模に。"
     },
     "investors": {
       "title": "投資家",
