Add Press page and update routing and localization files

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -695,6 +695,75 @@
     "diegoAuthor": "Diego Fernández",
     "diegoTitle": "クリエイティブディレクター"
   },
+  "press": {
+    "badge": "プレス＆メディア",
+    "title": "プレス＆メディア",
+    "subtitle": "Klivを取材するジャーナリストやメディア専門家向けのニュース、リソース、情報。",
+    "contact": {
+      "label": "プレスのお問い合わせ"
+    },
+    "facts": {
+      "title": "企業情報",
+      "subtitle": "Klivの簡単な情報",
+      "founded": {
+        "label": "設立",
+        "value": "2024年"
+      },
+      "team": {
+        "label": "チーム",
+        "value": "リモートファースト"
+      },
+      "mission": {
+        "label": "ミッション",
+        "value": "開発の民主化"
+      }
+    },
+    "about": {
+      "badge": "概要",
+      "title": "Klivについて",
+      "paragraph1": "Klivは、誰でも自然な会話を通じてプロフェッショナルなWebアプリケーションを構築できるAI駆動プラットフォームです。2024年に設立され、従来の技術的障壁を排除することで、人々がデジタル製品を作成する方法を変革しています。",
+      "paragraph2": "コーディング知識を必要とする従来の開発ツールとは異なり、Klivは高度なAIを使用してユーザーが構築したいものを理解し、本番環境対応のアプリケーションを自動的に生成します。プラットフォームには完全なバックエンドインフラストラクチャ（データベース、認証、ファイルストレージ、メール）が含まれているため、ユーザーはサーバーや技術的な設定を管理することなく、実際の完全に機能するアプリケーションを構築できます。",
+      "paragraph3": "Klivは、開発チームを雇ったり何ヶ月もコーディングを学んだりすることなく、アイデアを実現したい世界中の起業家、中小企業、クリエイターにサービスを提供しています。Klivで構築されたアプリケーションは、React、TypeScript、最新のクラウドインフラストラクチャを含む業界標準技術によって動いています。"
+    },
+    "assets": {
+      "title": "プレスキット＆資料",
+      "subtitle": "ロゴ、スクリーンショット、ブランド素材のダウンロード",
+      "logo": {
+        "title": "ロゴパッケージ",
+        "description": "さまざまな形式とカラースキームの高解像度ロゴ"
+      },
+      "screenshots": {
+        "title": "製品スクリーンショット",
+        "description": "公開用のインターフェーススクリーンショットと製品画像"
+      },
+      "brandGuide": {
+        "title": "ブランドガイドライン",
+        "description": "カラー、タイポグラフィ、使用ガイドライン"
+      },
+      "downloadCta": "ダウンロード",
+      "moreInfo": "追加資料やカスタムリクエストについては、お問い合わせください"
+    },
+    "news": {
+      "badge": "最新",
+      "title": "最近のニュース",
+      "items": {
+        "launch": {
+          "date": "2024年11月",
+          "title": "Kliv、ノーコードアプリ開発のためのAIプラットフォームをローンチ",
+          "description": "Klivは、誰でも自然言語の会話を通じてプロフェッショナルなWebアプリケーションを構築できるAI駆動開発プラットフォームの公開ローンチを発表しました。"
+        },
+        "funding": {
+          "date": "2024年",
+          "title": "Kliv、Rational Venturesから資金調達を確保",
+          "description": "Klivは、AI駆動プラットフォームの開発を加速し、バックエンドインフラストラクチャ機能を拡張するため、Rational Venturesからの資金調達を発表しました。"
+        }
+      }
+    },
+    "contactSection": {
+      "title": "メディアお問い合わせ",
+      "description": "プレスのお問い合わせ、インタビュー、またはKlivに関する追加情報については、プレスチームにご連絡ください。通常24時間以内に返信いたします。"
+    }
+  },
   "aboutPage": {
     "title": "Klivについて",
     "foundersNote": {
