--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -695,6 +695,75 @@
     "diegoAuthor": "Diego Fernández",
     "diegoTitle": "Kreativ direktör"
   },
+  "press": {
+    "badge": "Press & Media",
+    "title": "Press & Media",
+    "subtitle": "Nyheter, resurser och information för journalister och medieprofessionella som skriver om Kliv.",
+    "contact": {
+      "label": "Pressförfrågningar"
+    },
+    "facts": {
+      "title": "Företagsfakta",
+      "subtitle": "Snabba fakta om Kliv",
+      "founded": {
+        "label": "Grundad",
+        "value": "2024"
+      },
+      "team": {
+        "label": "Team",
+        "value": "Remote-först"
+      },
+      "mission": {
+        "label": "Uppdrag",
+        "value": "Demokratisera utveckling"
+      }
+    },
+    "about": {
+      "badge": "Om",
+      "title": "Om Kliv",
+      "paragraph1": "Kliv är en AI-driven plattform som gör det möjligt för vem som helst att bygga professionella webbapplikationer genom naturlig konversation. Grundad 2024, transformerar Kliv hur människor skapar digitala produkter genom att eliminera traditionella tekniska hinder.",
+      "paragraph2": "Till skillnad från traditionella utvecklingsverktyg som kräver kodningskunskap, använder Kliv avancerad AI för att förstå vad användare vill bygga och genererar produktionsklara applikationer automatiskt. Plattformen inkluderar komplett backend-infrastruktur (databas, autentisering, fillagring, e-post) så användare kan bygga riktiga, fullt funktionella applikationer utan att hantera servrar eller teknisk konfiguration.",
+      "paragraph3": "Kliv betjänar entreprenörer, småföretag och skapare över hela världen som vill förverkliga sina idéer utan att anställa utvecklingsteam eller spendera månader på att lära sig koda. Applikationer byggda med Kliv drivs av branschstandardteknologier inklusive React, TypeScript och modern molninfrastruktur."
+    },
+    "assets": {
+      "title": "Presskit & tillgångar",
+      "subtitle": "Ladda ner logotyper, skärmdumpar och varumärkesmaterial",
+      "logo": {
+        "title": "Logotyppaket",
+        "description": "Högupplösta logotyper i olika format och färgscheman"
+      },
+      "screenshots": {
+        "title": "Produktskärmdumpar",
+        "description": "Gränssnittsskärmdumpar och produktbilder för publicering"
+      },
+      "brandGuide": {
+        "title": "Varumärkesriktlinjer",
+        "description": "Färger, typografi och användningsriktlinjer"
+      },
+      "downloadCta": "Ladda ner",
+      "moreInfo": "För ytterligare material eller specialförfrågningar, kontakta"
+    },
+    "news": {
+      "badge": "Senaste",
+      "title": "Senaste nyheterna",
+      "items": {
+        "launch": {
+          "date": "November 2024",
+          "title": "Kliv lanserar AI-plattform för no-code apputveckling",
+          "description": "Kliv tillkännager den offentliga lanseringen av sin AI-drivna utvecklingsplattform som gör det möjligt för vem som helst att bygga professionella webbapplikationer genom naturlig språkkonversation."
+        },
+        "funding": {
+          "date": "2024",
+          "title": "Kliv säkrar finansiering från Rational Ventures",
+          "description": "Kliv tillkännager finansiering från Rational Ventures för att accelerera utvecklingen av sin AI-drivna plattform och expandera sina backend-infrastrukturmöjligheter."
+        }
+      }
+    },
+    "contactSection": {
+      "title": "Mediaförfrågningar",
+      "description": "För pressförfrågningar, intervjuer eller ytterligare information om Kliv, vänligen kontakta vårt pressteam. Vi svarar vanligtvis inom 24 timmar."
+    }
+  },
   "aboutPage": {
     "title": "Om Kliv",
     "foundersNote": {
