--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -695,6 +695,75 @@
     "diegoAuthor": "Diego Fernández",
     "diegoTitle": "Creative Director"
   },
+  "press": {
+    "badge": "Press & Media",
+    "title": "Press & Media",
+    "subtitle": "News, resources, and information for journalists and media professionals covering Kliv.",
+    "contact": {
+      "label": "Press inquiries"
+    },
+    "facts": {
+      "title": "Company Facts",
+      "subtitle": "Quick facts about Kliv",
+      "founded": {
+        "label": "Founded",
+        "value": "2024"
+      },
+      "team": {
+        "label": "Team",
+        "value": "Remote-First"
+      },
+      "mission": {
+        "label": "Mission",
+        "value": "Democratize Development"
+      }
+    },
+    "about": {
+      "badge": "About",
+      "title": "About Kliv",
+      "paragraph1": "Kliv is an AI-powered platform that enables anyone to build professional web applications through natural conversation. Founded in 2024, Kliv is transforming how people create digital products by eliminating traditional technical barriers.",
+      "paragraph2": "Unlike traditional development tools that require coding knowledge, Kliv uses advanced AI to understand what users want to build and generates production-ready applications automatically. The platform includes complete backend infrastructure (database, authentication, file storage, email) so users can build real, fully-functional applications without managing servers or technical configuration.",
+      "paragraph3": "Kliv serves entrepreneurs, small businesses, and creators worldwide who want to bring their ideas to life without hiring development teams or spending months learning to code. Applications built with Kliv are powered by industry-standard technologies including React, TypeScript, and modern cloud infrastructure."
+    },
+    "assets": {
+      "title": "Press Kit & Assets",
+      "subtitle": "Download logos, screenshots, and brand materials",
+      "logo": {
+        "title": "Logo Package",
+        "description": "High-resolution logos in various formats and color schemes"
+      },
+      "screenshots": {
+        "title": "Product Screenshots",
+        "description": "Interface screenshots and product images for publication"
+      },
+      "brandGuide": {
+        "title": "Brand Guidelines",
+        "description": "Colors, typography, and usage guidelines"
+      },
+      "downloadCta": "Download",
+      "moreInfo": "For additional materials or custom requests, contact"
+    },
+    "news": {
+      "badge": "Latest",
+      "title": "Recent News",
+      "items": {
+        "launch": {
+          "date": "November 2024",
+          "title": "Kliv Launches AI Platform for No-Code App Development",
+          "description": "Kliv announces the public launch of its AI-powered development platform that enables anyone to build professional web applications through natural language conversation."
+        },
+        "funding": {
+          "date": "2024",
+          "title": "Kliv Secures Funding from Rational Ventures",
+          "description": "Kliv announces funding from Rational Ventures to accelerate development of its AI-powered platform and expand its backend infrastructure capabilities."
+        }
+      }
+    },
+    "contactSection": {
+      "title": "Media Inquiries",
+      "description": "For press inquiries, interviews, or additional information about Kliv, please contact our press team. We typically respond within 24 hours."
+    }
+  },
   "aboutPage": {
     "title": "About Kliv",
     "foundersNote": {
