Update press assets localization and simplify Press page structure

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -726,38 +726,8 @@
       "paragraph3": "Kliv serves entrepreneurs, small businesses, and creators worldwide who want to bring their ideas to life without hiring development teams or spending months learning to code. Applications built with Kliv are powered by industry-standard technologies including React, TypeScript, and modern cloud infrastructure."
     },
     "assets": {
-      "title": "Press Kit & Assets",
-      "subtitle": "Download logos, screenshots, and brand materials",
-      "logo": {
-        "title": "Logo Package",
-        "description": "High-resolution logos in various formats and color schemes"
-      },
-      "screenshots": {
-        "title": "Product Screenshots",
-        "description": "Interface screenshots and product images for publication"
-      },
-      "brandGuide": {
-        "title": "Brand Guidelines",
-        "description": "Colors, typography, and usage guidelines"
-      },
-      "downloadCta": "Download",
-      "moreInfo": "For additional materials or custom requests, contact"
-    },
-    "news": {
-      "badge": "Latest",
-      "title": "Recent News",
-      "items": {
-        "launch": {
-          "date": "November 2024",
-          "title": "Kliv Launches AI Platform for No-Code App Development",
-          "description": "Kliv announces the public launch of its AI-powered development platform that enables anyone to build professional web applications through natural language conversation."
-        },
-        "funding": {
-          "date": "2024",
-          "title": "Kliv Secures Funding from Rational Ventures",
-          "description": "Kliv announces funding from Rational Ventures to accelerate development of its AI-powered platform and expand its backend infrastructure capabilities."
-        }
-      }
+      "title": "Press Kit & Brand Assets",
+      "contactForMaterials": "For logos, screenshots, brand guidelines, and other press materials, please contact our press team and we'll be happy to provide what you need."
     },
     "contactSection": {
       "title": "Media Inquiries",
