--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -726,38 +726,8 @@
       "paragraph3": "Klivは、開発チームを雇ったり何ヶ月もコーディングを学んだりすることなく、アイデアを実現したい世界中の起業家、中小企業、クリエイターにサービスを提供しています。Klivで構築されたアプリケーションは、React、TypeScript、最新のクラウドインフラストラクチャを含む業界標準技術によって動いています。"
     },
     "assets": {
-      "title": "プレスキット＆資料",
-      "subtitle": "ロゴ、スクリーンショット、ブランド素材のダウンロード",
-      "logo": {
-        "title": "ロゴパッケージ",
-        "description": "さまざまな形式とカラースキームの高解像度ロゴ"
-      },
-      "screenshots": {
-        "title": "製品スクリーンショット",
-        "description": "公開用のインターフェーススクリーンショットと製品画像"
-      },
-      "brandGuide": {
-        "title": "ブランドガイドライン",
-        "description": "カラー、タイポグラフィ、使用ガイドライン"
-      },
-      "downloadCta": "ダウンロード",
-      "moreInfo": "追加資料やカスタムリクエストについては、お問い合わせください"
-    },
-    "news": {
-      "badge": "最新",
-      "title": "最近のニュース",
-      "items": {
-        "launch": {
-          "date": "2024年11月",
-          "title": "Kliv、ノーコードアプリ開発のためのAIプラットフォームをローンチ",
-          "description": "Klivは、誰でも自然言語の会話を通じてプロフェッショナルなWebアプリケーションを構築できるAI駆動開発プラットフォームの公開ローンチを発表しました。"
-        },
-        "funding": {
-          "date": "2024年",
-          "title": "Kliv、Rational Venturesから資金調達を確保",
-          "description": "Klivは、AI駆動プラットフォームの開発を加速し、バックエンドインフラストラクチャ機能を拡張するため、Rational Venturesからの資金調達を発表しました。"
-        }
-      }
+      "title": "プレスキット＆ブランド資料",
+      "contactForMaterials": "ロゴ、スクリーンショット、ブランドガイドライン、その他のプレス資料については、プレスチームにお問い合わせください。必要な資料を喜んで提供いたします。"
     },
     "contactSection": {
       "title": "メディアお問い合わせ",
