--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -726,38 +726,8 @@
       "paragraph3": "Kliv betjänar entreprenörer, småföretag och skapare över hela världen som vill förverkliga sina idéer utan att anställa utvecklingsteam eller spendera månader på att lära sig koda. Applikationer byggda med Kliv drivs av branschstandardteknologier inklusive React, TypeScript och modern molninfrastruktur."
     },
     "assets": {
-      "title": "Presskit & tillgångar",
-      "subtitle": "Ladda ner logotyper, skärmdumpar och varumärkesmaterial",
-      "logo": {
-        "title": "Logotyppaket",
-        "description": "Högupplösta logotyper i olika format och färgscheman"
-      },
-      "screenshots": {
-        "title": "Produktskärmdumpar",
-        "description": "Gränssnittsskärmdumpar och produktbilder för publicering"
-      },
-      "brandGuide": {
-        "title": "Varumärkesriktlinjer",
-        "description": "Färger, typografi och användningsriktlinjer"
-      },
-      "downloadCta": "Ladda ner",
-      "moreInfo": "För ytterligare material eller specialförfrågningar, kontakta"
-    },
-    "news": {
-      "badge": "Senaste",
-      "title": "Senaste nyheterna",
-      "items": {
-        "launch": {
-          "date": "November 2024",
-          "title": "Kliv lanserar AI-plattform för no-code apputveckling",
-          "description": "Kliv tillkännager den offentliga lanseringen av sin AI-drivna utvecklingsplattform som gör det möjligt för vem som helst att bygga professionella webbapplikationer genom naturlig språkkonversation."
-        },
-        "funding": {
-          "date": "2024",
-          "title": "Kliv säkrar finansiering från Rational Ventures",
-          "description": "Kliv tillkännager finansiering från Rational Ventures för att accelerera utvecklingen av sin AI-drivna plattform och expandera sina backend-infrastrukturmöjligheter."
-        }
-      }
+      "title": "Presskit & varumärkestillgångar",
+      "contactForMaterials": "För logotyper, skärmdumpar, varumärkesriktlinjer och annat pressmaterial, vänligen kontakta vårt pressteam så hjälper vi gärna till med vad du behöver."
     },
     "contactSection": {
       "title": "Mediaförfrågningar",
