Add CTA section and localize content for multiple languages

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -662,6 +662,12 @@
   "breadcrumb": {
     "allInspiration": "All Inspiration"
   },
+  "cta": {
+    "title": "Ready to Build Your App?",
+    "description": "Join thousands of creators who are bringing their ideas to life with Kliv. Start building today — no credit card required.",
+    "getStarted": "Get Started Free",
+    "learnMore": "Explore Features"
+  },
   "testimonials": {
     "title": "What Our Users Say",
     "githubIntegration": "The GitHub integration just works. built my portfolio in an afternoon, pretty happy with that",
