--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -662,6 +662,12 @@
   "breadcrumb": {
     "allInspiration": "すべてのインスピレーション"
   },
+  "cta": {
+    "title": "アプリを作る準備はできましたか？",
+    "description": "Klivでアイデアを実現している何千人ものクリエイターに参加しましょう。今日から構築を開始 — クレジットカード不要。",
+    "getStarted": "無料で始める",
+    "learnMore": "機能を見る"
+  },
   "testimonials": {
     "title": "ユーザーの声",
     "githubIntegration": "GitHub統合がうまく機能します。午後にポートフォリオを構築できて、かなり満足しています",
