--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -662,6 +662,12 @@
   "breadcrumb": {
     "allInspiration": "All inspiration"
   },
+  "cta": {
+    "title": "Redo att bygga din app?",
+    "description": "Gå med tusentals skapare som förverkligar sina idéer med Kliv. Börja bygga idag — inget kreditkort krävs.",
+    "getStarted": "Kom igång gratis",
+    "learnMore": "Utforska funktioner"
+  },
   "testimonials": {
     "title": "Vad våra användare säger",
     "githubIntegration": "GitHub-integrationen fungerar bara. byggde min portfölj på en eftermiddag, ganska nöjd med det",
