Update UI components with gradient backgrounds and add new i18n keys

--- a/src/i18n/locales/ja.json
+++ b/src/i18n/locales/ja.json
@@ -45,6 +45,7 @@
     }
   },
   "community": {
+    "badge": "クリエイターによる構築",
     "title": "可能性を探る",
     "subtitle": "世界中の開発者やクリエイターがKlivで構築した実際のアプリケーションをご覧ください",
     "by": "作成者",
@@ -277,6 +278,7 @@
     "subscribe": "構築開始",
     "contactUs": "営業にお問い合わせ",
     "free": "無料",
+    "freeSubtitle": "永久に",
     "custom": "カスタム",
     "customPricing": "カスタム料金",
     "donation": "寄付",
@@ -338,6 +340,8 @@
       "paragraph2": "私たちのAI駆動プラットフォームは、誰でも自分のビジョンを平易な言葉で説明し、それが完全に機能するウェブアプリケーションに変換されるのを見ることができます。スタートアップのアイデアを持つ起業家、オンラインプレゼンスを確立したい中小企業経営者、または単にクリエイティブなプロジェクトを実現したい人など、Klivはあなたの成功を支援します。"
     },
     "values": {
+      "title": "私たちの価値観",
+      "subtitle": "私たちのすべての行動を導く原則",
       "accessibility": {
         "title": "アクセシビリティファースト",
         "description": "デジタルソリューションの作成を妨げる技術的障壁を取り除くことにコミットしています。私たちのプラットフォームは、すべてのスキルレベルのユーザーにとって直感的でアプローチしやすいように設計されています。"
@@ -427,6 +431,7 @@
     "company": "会社",
     "about": "私たちについて",
     "careers": "キャリア",
+    "press": "プレス",
     "support": "サポート",
     "contact": "お問い合わせ",
     "serviceStatus": "サービス状況",
@@ -669,7 +674,9 @@
     "learnMore": "機能を見る"
   },
   "testimonials": {
+    "badge": "ビルダーに信頼されています",
     "title": "ユーザーの声",
+    "subtitle": "Klivで構築している人々からの実際のフィードバック",
     "githubIntegration": "GitHub統合がうまく機能します。午後にポートフォリオを構築できて、かなり満足しています",
     "emmaChenAuthor": "Emma Chen",
     "emmaChenTitle": "フロントエンド開発者",
@@ -742,6 +749,11 @@
   },
   "aboutPage": {
     "title": "Klivについて",
+    "badges": {
+      "platform": "プラットフォーム",
+      "roadmap": "ロードマップ",
+      "backedBy": "支援元"
+    },
     "foundersNote": {
       "title": "創設者からのメッセージ",
       "founderAlt": "Anders Olsson、Kliv創設者",
@@ -755,8 +767,11 @@
     },
     "whatIsKliv": {
       "title": "Klivとは",
-      "paragraph1": "Klivは、AIが本格的なソフトウェアを構築・出荷できるプログラマブルなキャンバスです — モックアップでもデモでもなく、本格的なコードです。",
-      "paragraph2": "私たちはフロントエンドに焦点を当てることから始めています。現在のフロンティアモデルはReactとTailwindでの構築が得意なので、今はそれを使用しています。"
+      "paragraph1": "Klivは、対話型の会話を通じてWebアプリケーションを構築するエージェント型AIプラットフォームです。すべてを一度の返信で生成する第一世代のAIビルダーとは異なり、Klivは実際の開発者のように動作します - 要件を検討し、ファイルを検査し、反復的な変更を行い、ステップバイステップでコードを改良します。",
+      "paragraph2": "AIがプロジェクトについて推論し、明確化の質問をし、系統立ててアプリケーションを構築する様子をご覧ください。迅速なプロトタイピング、起業家、技術的な複雑さなしにプロフェッショナルなアプリケーションを望む企業に最適です。",
+      "paragraph3": "事前構築されたアプリやウェブサイトのライブラリから始めるか、ゼロから構築するか - いずれの場合でも、数分でカスタムアプリケーションが完成します。アプリは初日からkliv.siteで無料ホスティングを取得し、即座にデプロイメントされ、設定は不要です。",
+      "paragraph4": "内蔵のワークスペースでは、コードを直接編集し、公開前に変更をプレビューし、完全なリビジョン履歴を維持して、以前のバージョンにロールバックできます。チームが成長したらGitHubに接続してソース管理を行うか、いつでもコードベース全体をエクスポートできます。",
+      "paragraph5": "プロフェッショナルなアプリ開発に必要なすべてのツールが単一のプラットフォームに統合されており、初期プロトタイプから本番デプロイメント、継続的な更新までをカバーします。Klivには完全に統合されたバックエンドが含まれており、すべてのアプリに最初からデータベース、認証、API機能を提供します。"
     },
     "whereWereGoing": {
       "title": "私たちが目指すところ",
