--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -45,6 +45,7 @@
     }
   },
   "community": {
+    "badge": "Built by Creators",
     "title": "Explore What's Possible",
     "subtitle": "See real applications built with Kliv by developers and creators worldwide",
     "by": "by",
@@ -55,6 +56,7 @@
     }
   },
   "howItWorks": {
+    "badge": "Simple Process",
     "title": "How Kliv Works",
     "subtitle": "From idea to reality in four simple steps",
     "step1": {
@@ -277,6 +279,7 @@
     "subscribe": "Start Building",
     "contactUs": "Contact Sales",
     "free": "Free",
+    "freeSubtitle": "Always",
     "custom": "Custom",
     "customPricing": "Custom pricing",
     "donation": "Donation",
@@ -338,6 +341,8 @@
       "paragraph2": "Our AI-powered platform allows anyone to describe their vision in plain language and watch as it transforms into a fully functional web application. Whether you're an entrepreneur with a startup idea, a small business owner looking to establish an online presence, or someone who simply wants to bring a creative project to life, Kliv is here to help you succeed."
     },
     "values": {
+      "title": "Our Values",
+      "subtitle": "The principles that guide everything we do",
       "accessibility": {
         "title": "Accessibility First",
         "description": "We're committed to breaking down the technical barriers that prevent people from creating digital solutions. Our platform is designed to be intuitive and approachable for users of all skill levels."
@@ -427,6 +432,7 @@
     "company": "Company",
     "about": "About",
     "careers": "Careers",
+    "press": "Press",
     "support": "Support",
     "contact": "Contact",
     "serviceStatus": "Service Status",
@@ -669,7 +675,9 @@
     "learnMore": "Explore Features"
   },
   "testimonials": {
+    "badge": "Trusted by Builders",
     "title": "What Our Users Say",
+    "subtitle": "Real feedback from people building with Kliv",
     "githubIntegration": "The GitHub integration just works. built my portfolio in an afternoon, pretty happy with that",
     "emmaChenAuthor": "Emma Chen",
     "emmaChenTitle": "Frontend Developer",
@@ -742,6 +750,11 @@
   },
   "aboutPage": {
     "title": "About Kliv",
+    "badges": {
+      "platform": "Platform",
+      "roadmap": "Roadmap",
+      "backedBy": "Backed By"
+    },
     "foundersNote": {
       "title": "Founder's note",
       "founderAlt": "Anders Olsson, Founder of Kliv",
