--- a/src/i18n/locales/sv.json
+++ b/src/i18n/locales/sv.json
@@ -45,6 +45,7 @@
     }
   },
   "community": {
+    "badge": "Byggd av skapare",
     "title": "Utforska vad som är möjligt",
     "subtitle": "Se riktiga applikationer byggda med Kliv av utvecklare och skapare över hela världen",
     "by": "av",
@@ -55,6 +56,7 @@
     }
   },
   "howItWorks": {
+    "badge": "Enkel process",
     "title": "Så fungerar Kliv",
     "subtitle": "Från idé till verklighet i fyra enkla steg",
     "step1": {
@@ -277,6 +279,7 @@
     "subscribe": "Börja bygga",
     "contactUs": "Kontakta försäljning",
     "free": "Gratis",
+    "freeSubtitle": "Alltid",
     "custom": "Anpassad",
     "customPricing": "Anpassad prissättning",
     "donation": "Donation",
@@ -338,6 +341,8 @@
       "paragraph2": "Vår AI-drivna plattform låter vem som helst beskriva sin vision på vanligt språk och se hur den förvandlas till en fullt fungerande webbapplikation. Oavsett om du är en entreprenör med en startup-idé, en småföretagare som vill etablera en onlinenärvaro, eller någon som helt enkelt vill förverkliga ett kreativt projekt, är Kliv här för att hjälpa dig lyckas."
     },
     "values": {
+      "title": "Våra värderingar",
+      "subtitle": "Principerna som styr allt vi gör",
       "accessibility": {
         "title": "Tillgänglighet först",
         "description": "Vi är engagerade i att bryta ner de tekniska hinder som hindrar människor från att skapa digitala lösningar. Vår plattform är designad för att vara intuitiv och tillgänglig för användare på alla kompetensnivåer."
@@ -427,6 +432,7 @@
     "company": "Företag",
     "about": "Om",
     "careers": "Karriärer",
+    "press": "Press",
     "support": "Support",
     "contact": "Kontakt",
     "serviceStatus": "Servicestatus",
@@ -669,7 +675,9 @@
     "learnMore": "Utforska funktioner"
   },
   "testimonials": {
+    "badge": "Betrodd av byggare",
     "title": "Vad våra användare säger",
+    "subtitle": "Verklig feedback från personer som bygger med Kliv",
     "githubIntegration": "GitHub-integrationen fungerar bara. byggde min portfölj på en eftermiddag, ganska nöjd med det",
     "emmaChenAuthor": "Emma Chen",
     "emmaChenTitle": "Frontend-utvecklare",
@@ -742,6 +750,11 @@
   },
   "aboutPage": {
     "title": "Om Kliv",
+    "badges": {
+      "platform": "Plattform",
+      "roadmap": "Färdplan",
+      "backedBy": "Stöds av"
+    },
     "foundersNote": {
       "title": "Grundarens anteckning",
       "founderAlt": "Anders Olsson, grundare av Kliv",
@@ -755,8 +768,11 @@
     },
     "whatIsKliv": {
       "title": "Vad är Kliv",
-      "paragraph1": "Kliv är en programmerbar canvas där AI kan bygga och leverera verklig programvara — inte mockups, inte demos, utan produktionsklar kod.",
-      "paragraph2": "Vi börjar med fokus på frontend. De nuvarande frontiermodellerna är bra på att bygga med React och Tailwind, så det är vad vi använder just nu."
+      "paragraph1": "Kliv är en agentisk AI-plattform som bygger webbapplikationer genom interaktiv konversation. Till skillnad från första generationens AI-byggare som genererar allt i ett enda svar, arbetar Kliv som en riktig utvecklare - tänker igenom krav, inspekterar filer, gör iterativa ändringar och förfinar kod steg för steg.",
+      "paragraph2": "Se när AI:n resonerar genom ditt projekt, ställer förtydligande frågor och metodiskt bygger din applikation. Perfekt för snabb prototypframtagning, entreprenörer och företag som vill ha professionella applikationer utan teknisk komplexitet.",
+      "paragraph3": "Börja med ett bibliotek av färdigbyggda appar och webbplatser eller bygg från grunden - hur som helst har du en anpassad applikation på några minuter. Din app får gratis hosting på kliv.site från dag ett, med omedelbar distribution och ingen konfiguration krävs.",
+      "paragraph4": "Den inbyggda arbetsytan låter dig redigera kod direkt, förhandsgranska ändringar innan publicering och behålla fullständig versionshistorik så att du kan återställa till vilken tidigare version som helst. Anslut till GitHub för versionskontroll när ditt team växer, eller exportera hela kodbasen när som helst.",
+      "paragraph5": "Alla verktyg du behöver för professionell apputveckling är integrerade i en enda plattform, från initial prototyp genom produktionsdistribution och pågående uppdateringar. Kliv inkluderar en helt integrerad backend som ger varje app databas, autentisering och API-funktioner direkt ur lådan."
     },
     "whereWereGoing": {
       "title": "Vart vi är på väg",
